--- a/GSBVisiteurs/nbproject/project.properties
+++ b/GSBVisiteurs/nbproject/project.properties
@@ -52,7 +52,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ctrl.Main
+main.class=ctrl.Main1111
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
