--- a/GSBVisiteurs/gsbVisiteurJdbc.properties
+++ b/GSBVisiteurs/gsbVisiteurJdbc.properties
@@ -11,8 +11,8 @@
 # A - Param\u00e8tres g\u00e9n\u00e9raux
 ######################################
 base=GSB
-utilisateur=root
-mdp=joliverie
+utilisateur=GSB
+mdp=gsb
 
 ######################################
 # B - Param\u00e8tres sp\u00e9cifiques SGBD
