--- a/GSBVisiteurs/nbproject/project.properties
+++ b/GSBVisiteurs/nbproject/project.properties
@@ -25,10 +25,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/GSBVisiteurs.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ojdbc14.jar=/home/btssio/Bibliotheques/java/ConnecteursJdbc/ojdbc14.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.ojdbc14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -52,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ctrl.Main1111
+main.class=ctrl.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
